Added screenshots to HTML.  Removed badges until able to complete that function

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <section class="container pic">
           <h2 id="howTo" class="mark subtitle" style="background-color:rgb(96, 171, 96)">Screenshots</h2>
           <div class="row">
-            <img id="screenshot" alt="screenshot-demo" class="screenshot" src="./assets/images/Placeholder Image.png">
-            <img id="screenshot" alt="screenshot-readMe" class="screenshot" src="./assets/images/Placeholder Image.png">
+            <img id="screenshot" alt="screenshot-demo" class="screenshot" src="./assets/images/screenshot-readmeDoc.png">
+            <img id="screenshot" alt="screenshot-readMe" class="screenshot" src="./assets/images/screenshot-readmeCode.png">
           </div>
         
 
@@ -80,6 +80,8 @@
 
         <section id="video" class="container video">
           <h2 id="howTo" class="mark subtitle" style="background-color:rgb(96, 171, 96)">Video Demo</h2>
+          <h3 class="credit"><i class="fa-solid fa-video"></i> Recorded using Screencastify  <i class="fa-solid fa-play"></i></h3>
+
           <img class="media vid" src="./assets/images/video-placeholder.png">
         </section>
 
