updated semi-complete project

--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
         <section id="video" class="container video">
           <h2 id="howTo" class="mark subtitle" style="background-color:rgb(96, 171, 96)">Video Demo</h2>
           <h3 class="credit"><i class="fa-solid fa-video"></i> Recorded using Screencastify  <i class="fa-solid fa-play"></i></h3>
-
-          <img class="media vid" src="./assets/images/video-placeholder.png">
+          <video class="vid" width="720" height="340" controls>
+            <source src="./assets/video/readMe-Demo.webm" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+          
         </section>
 
 
