update html to refelct new screenshots and vid along with margins

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img class="logo" src="./assets/images/node.png">
             <div class="text-center intro">
               
-              <p> This is a simple App using Node.js to create a basic ReadMe file for Projects</p>
+              <p> This is a simple App using Node.js to create a high quality ReadMe file for Projects</p>
           </div>
         </section>
 
