-updated to get working videos from HTML on safari

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2 id="howTo" class="mark subtitle" style="background-color:rgb(96, 171, 96)">Video Demo</h2>
           <h3 class="credit"><i class="fa-solid fa-video"></i> Recorded using Screencastify  <i class="fa-solid fa-play"></i></h3>
           <video class="vid" width="720" height="340" controls>
-            <source src="./assets/video/readMe-Demo.webm" type="video/mp4">
+            <source loop controls="true" src="./assets/video/readMe-Demo.webm" type="video/mp4">
           Your browser does not support the video tag.
           </video>
           
