update inquirer logo on html page

--- a/index.html
+++ b/index.html
@@ -54,10 +54,17 @@
 
     <main class="col">
       <section class="container top">
-        <h1 class="title" id="readMe">
-          <i class="fa-brands fa-readme make-big"></i> <br />ReadMe Maker
-        </h1>
-        <img class="logo" src="./assets/images/node.png" />
+        <div class="row">
+          <h1 class="title" id="readMe">
+            <i class="fa-brands fa-readme make-big"></i> <br />ReadMe Maker
+          </h1>
+          <img class="logo" src="./assets/images/node.png" alt="node logo" />
+          <img
+            class="logo2"
+            src="./assets/images/inquirer.png"
+            alt="inquirer logo"
+          />
+        </div>
         <div class="text-center intro">
           <p>
             This is a Node.js-powered solution that streamlines the process,
