updated minor tweaks to template, updated readme for project tile update, added browser tab icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       referrerpolicy="no-referrer"
     />
 
+    <link rel="icon" href="./assets/images/webReadMeMaker.png" />
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -161,7 +163,10 @@
 
     <footer class="footer">
       <h2>
-        <a href="https://ryanfann.netlify.app/" class="portfolio"
+        <a
+          href="https://ryanfann.netlify.app/"
+          target="_blank"
+          class="portfolio"
           >View My Portfolio</a
         >
       </h2>
